# myblog

./: .gitignore  README.md  pom.xml
deploy/: docker-compose.yml
deploy/mysql/init/: 001_schema.sql
deploy/rocketmq/: broker.conf
docs/superpowers/plans/: 2026-06-14-myblog-ai-cloud-milestone-1.md  2026-06-14-myblog-ai-cloud-remaining-milestones.md
docs/superpowers/specs/: 2026-06-14-myblog-ai-cloud-design.md
services/ai-agent-service/: .env.example  pyproject.toml
services/ai-agent-service/app/: main.py
services/ai-agent-service/app/api/: __init__.py  ai.py  health.py
services/ai-agent-service/app/core/: settings.py
services/ai-agent-service/app/services/: agent.py  llm.py  memory.py  vector_store.py
services/ai-agent-service/tests/: test_agent_service.py  test_api.py  test_deepseek_client.py  test_memory_vector_store.py
services/blog-service/: pom.xml
services/blog-service/src/main/java/com/dongyao/myblog/blog/: BlogApplication.java
services/blog-service/src/main/java/com/dongyao/myblog/blog/ai/: AiTask.java  AiTaskController.java  (+12 more)
services/blog-service/src/main/resources/: application.yml
services/gateway-service/: pom.xml
services/gateway-service/src/main/java/com/dongyao/myblog/gateway/: GatewayApplication.java
services/gateway-service/src/main/resources/: application.yml
web/admin-console/: index.html  package-lock.json  package.json
web/admin-console/src/: App.tsx  api.ts  styles.css
web/blog-client/: index.html  package-lock.json  package.json  vite.config.ts
web/blog-client/src/: App.tsx  api.ts  styles.css
(+39 files in other folders)
